<resources>
    <string name="app_name" translatable="false"> </string>
    <string name="place">Place</string>
    <string name="username" translatable="false">username</string>
    <string name="title_activity_profile" translatable="false">Profile page</string>
    <string name="title_activity_place" translatable="false">Place page</string>
    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>
    <string name="search_here">Search here</string>
    <string name="home">Home</string>
    <string name="how_it_works">How it works</string>
    <string name="choose_language">Choose language</string>
    <string name="communicate">Communicate</string>
    <string name="about_us">About us</string>
    <string name="contact_us">Contact us</string>
    <string name="sharing">Sharing</string>
    <string name="share_the_app">Share the app</string>
    <string name="rate_us">Rate us</string>
    <string name="nb_cliquer_sur_les_jours_pour_voir_les_horaires_du_travail">Note: click on the days to see the working hours</string>
    <string name="jeudi">Thursday</string>
    <string name="mercredi">Wednesday</string>
    <string name="mardi">Thuesday</string>
    <string name="lundi">Monday</string>
    <string name="dimanche">Sunday</string>
    <string name="horaires_du_travail">Working hours</string>
    <string name="contact">Contact</string>
    <string name="la_partie_description_n_est_pas_encore_termin">la partie description n\'est pas encore terminé</string>
    <string name="description_de_la_place">Description of the place</string>
    <string name="you_liked_the_app_please_give_us_a_feedback">You liked the app? please give us a feedback!</string>
    <string name="i_loved_it">I loved it</string>
    <string name="i_hated_it">I hated it</string>
    <string name="good_enough">Good Enough</string>
    <string name="submit">Submit</string>
    <string name="find_us">Find us</string>
    <string name="very_bad">Very bad</string>
    <string name="Really_bad">Really bad!</string>
    <string name="Not_that_good">Not that good!</string>
    <string name="Good_job">Good Job</string>
    <string name="Awsome">Awesome!</string>
    <string name="Amazing">Amazing!</string>
    <string name="Employer">Employee</string>
    <string name="Aller_vers_cet_endroit">Go to these place?</string>
    <string name="choose_languages">choose language</string>
    <string name="activer_la_cam_ra">Use My Camera</string>
    <string name="activer_la_localisation">Use My Location</string>
    <string name="connected">connected</string>
    <string name="not_connected">Please make sure to connect to internet</string>
    <string name="our_team">OUR TEAM</string>
    <string name="our_team_content">Our team is composed of 6 students from ESI-SBA that made Guiddini app as 2nd year project</string>
    <string name="aboutus_content">Guiddini is an AR application that helps you discover and find your way in ESI-SBA school by providing you with information about all places and employers.</string>
    <string name="whatwedo">WHAT WE DO</string>
    <string name="whatwedo_content">Our application give provide a user with all places in ESI-SBA with all their details and geographic place, it also gives informations about workers  such us (names - contact - time of work…)</string>
    <string name="droits">COPYRIGHT</string>
    <string name="droits_content">© COPYRIGHT 2020 - All Rights Reserved</string>
    <string name="matin">Morning</string>
    <string name="soir">Afternoon</string>
    <string name="searching_f">Searching For A Place?</string>
    <string name="autorisation_description">Enable your camera to allow the application\n \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 scan your environement and find\n \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 \u00A0 all services and places</string>
    <string name="Enable_camera">Enable Your Camera</string>
    <string name="find_a_place_now">find a place now</string>


    <string-array name="ResultSuggestions">
        <item>Office of the Preparatory Cycle Leader</item>
        <item>Office of the director of school</item>
        <item>Direction of school</item>
        <item>Direction of education, diplomas and continuing education</item>
        <item>Mohamed Aced Réda</item>
        <item>Secretariat of direction</item>
        <item>Continuing education service</item>
        <item>Scholar service</item>
        <item>Diploma service</item>
        <item>Sidi Mohammed Benslimane</item>
    </string-array>
</resources>

